@startuml

class AiDuplicateDetectionLatestResponseDTO {
}


class AiDuplicateDetectionRequestDTO {
	{field} +threshold : Double
}


class AiDuplicateDetectionResultResponseDTO {
	{field} +createdAt : String
	{field} +projectId : String
	{field} +reason : String
	{field} +resultId : String
	{field} +runId : String
	{field} +similarityScore : Double
	{field} +taskAId : String
	{field} +taskATitle : String
	{field} +taskBId : String
	{field} +taskBTitle : String
}


class AiDuplicateDetectionRunResponseDTO {
	{field} +completedAt : String
	{field} +createdAt : String
	{field} +errorMessage : String
	{field} +projectId : String
	{field} +runId : String
	{field} +status : String
	{field} +tasksAnalyzed : Integer
	{field} +threshold : Double
}


class AiDuplicateDetectionService {
	{field} {static} -STATUS_COMPLETED : String
	{field} {static} -STATUS_FAILED : String
	{field} {static} -STATUS_PENDING : String
	{field} -producer : AiDuplicateDetectionProducer
	{field} -projectRepository : ProjectRepository
	{field} -resultRepository : AiTaskDuplicateResultRepository
	{field} -runRepository : AiTaskDuplicateDetectionRunRepository
	{field} -taskService : TaskService
	{method} -buildRequestEvent ( run : AiTaskDuplicateDetectionRunEntity , tasks : List ) : AiDuplicateDetectionRequestEvent
	{method} +getLatestByProject ( projectId : String ) : AiDuplicateDetectionLatestResponseDTO
	{method} +getResultsByRun ( runId : String ) : List
	{method} +getRunsByProject ( projectId : String ) : List
	{method} -hexToUuid ( hex : String ) : UUID
	{method} -mapResultToResponse ( result : AiTaskDuplicateResultEntity ) : AiDuplicateDetectionResultResponseDTO
	{method} -mapRunToResponse ( run : AiTaskDuplicateDetectionRunEntity ) : AiDuplicateDetectionRunResponseDTO
	{method} -parseId ( value : String , errorMessage : String ) : UUID
	{method} -parseProjectId ( projectId : String ) : UUID
	{method} -resolveThreshold ( request : AiDuplicateDetectionRequestDTO ) : Double
	{method} -safeScore ( score : Double ) : Double
	{method} -safeTitle ( title : String , taskId : String ) : String
	{method} +saveResultsFromAiResponse ( event : AiDuplicateDetectionResponseEvent ) : int
	{method} +startDuplicateDetection ( projectId : String , request : AiDuplicateDetectionRequestDTO ) : AiDuplicateDetectionRunResponseDTO
	{method} -truncate ( value : String , maxLength : int ) : String
	{method} -uuidToHex ( uuid : UUID ) : String
}


class AiSemanticDuplicateDetectionLatestResponseDTO {
}


class AiSemanticDuplicateDetectionResultResponseDTO {
	{field} +createdAt : String
	{field} +projectId : String
	{field} +reason : String
	{field} +resultId : String
	{field} +runId : String
	{field} +similarityScore : Double
	{field} +taskAId : String
	{field} +taskATitle : String
	{field} +taskBId : String
	{field} +taskBTitle : String
}


class AiSemanticDuplicateDetectionRunEntity {
	{field} +completedAt : LocalDateTime
	{field} +createdAt : LocalDateTime
	{field} +detectionEngine : String
	{field} +embeddingModel : String
	{field} +errorMessage : String
	{field} +projectId : UUID
	{field} -runId : UUID
	{field} +status : String
	{field} +tasksAnalyzed : Integer
	{field} +threshold : Double
}


interface AiSemanticDuplicateDetectionRunRepository {
	{method}  {abstract} +findByProjectIdOrderByCreatedAtDesc ( projectId : UUID ) : List
	{method}  {abstract} +findFirstByProjectIdOrderByCreatedAtDesc ( projectId : UUID ) : Optional
}


class AiSemanticDuplicateDetectionRunResponseDTO {
	{field} +completedAt : String
	{field} +createdAt : String
	{field} +detectionEngine : String
	{field} +embeddingModel : String
	{field} +errorMessage : String
	{field} +projectId : String
	{field} +runId : String
	{field} +status : String
	{field} +tasksAnalyzed : Integer
	{field} +threshold : Double
}


class AiSemanticDuplicateDetectionService {
	{field} {static} -DEFAULT_EMBEDDING_MODEL : String
	{field} {static} -DETECTION_ENGINE : String
	{field} {static} -STATUS_COMPLETED : String
	{field} {static} -STATUS_FAILED : String
	{field} {static} -STATUS_PENDING : String
	{field} -embeddingRepository : TaskSemanticEmbeddingRepository
	{field} -producer : AiSemanticDuplicateDetectionProducer
	{field} -projectRepository : ProjectRepository
	{field} -taskService : TaskService
	{method} -buildRequestEvent ( run : AiSemanticDuplicateDetectionRunEntity , tasks : List ) : AiSemanticDuplicateDetectionRequestEvent
	{method} +getLatestByProject ( projectId : String ) : AiSemanticDuplicateDetectionLatestResponseDTO
	{method} +getResultsByRun ( runId : String ) : List
	{method} +getRunsByProject ( projectId : String ) : List
	{method} -hexToUuid ( hex : String ) : UUID
	{method} -mapResultToResponse ( result : AiSemanticDuplicateResultEntity ) : AiSemanticDuplicateDetectionResultResponseDTO
	{method} -mapRunToResponse ( run : AiSemanticDuplicateDetectionRunEntity ) : AiSemanticDuplicateDetectionRunResponseDTO
	{method} -parseId ( value : String , errorMessage : String ) : UUID
	{method} -parseProjectId ( projectId : String ) : UUID
	{method} -resolveThreshold ( request : AiDuplicateDetectionRequestDTO ) : Double
	{method} -safeScore ( score : Double ) : Double
	{method} -safeTitle ( title : String , taskId : String ) : String
	{method} -saveEmbeddings ( event : AiSemanticDuplicateDetectionResponseEvent , run : AiSemanticDuplicateDetectionRunEntity ) : void
	{method} +saveResultsFromAiResponse ( event : AiSemanticDuplicateDetectionResponseEvent ) : int
	{method} +startSemanticDuplicateDetection ( projectId : String , request : AiDuplicateDetectionRequestDTO ) : AiSemanticDuplicateDetectionRunResponseDTO
	{method} -truncate ( value : String , maxLength : int ) : String
	{method} -uuidToHex ( uuid : UUID ) : String
}


class AiSemanticDuplicateResultEntity {
	{field} +createdAt : LocalDateTime
	{field} +projectId : UUID
	{field} +reason : String
	{field} -resultId : UUID
	{field} +runId : UUID
	{field} +similarityScore : Double
	{field} +taskAId : UUID
	{field} +taskATitle : String
	{field} +taskBId : UUID
	{field} +taskBTitle : String
}


interface AiSemanticDuplicateResultRepository {
	{method}  {abstract} +deleteByRunId ( runId : UUID ) : void
	{method}  {abstract} +findByProjectId ( projectId : UUID ) : List
	{method}  {abstract} +findByRunId ( runId : UUID ) : List
}


class AiVectorDuplicateDetectionLatestResponseDTO {
}


class AiVectorDuplicateDetectionResultResponseDTO {
	{field} +createdAt : String
	{field} +distance : Double
	{field} +projectId : String
	{field} +resultId : String
	{field} +runId : String
	{field} +similarityScore : Double
	{field} +taskAId : String
	{field} +taskATitle : String
	{field} +taskBId : String
	{field} +taskBTitle : String
}


class AiVectorDuplicateDetectionRunEntity {
	{field} +completedAt : LocalDateTime
	{field} +createdAt : LocalDateTime
	{field} +detectionEngine : String
	{field} +embeddingModel : String
	{field} +errorMessage : String
	{field} +projectId : UUID
	{field} -runId : UUID
	{field} +status : String
	{field} +tasksAnalyzed : Integer
	{field} +threshold : Double
}


interface AiVectorDuplicateDetectionRunRepository {
	{method}  {abstract} +findByProjectIdOrderByCreatedAtDesc ( projectId : UUID ) : List
	{method}  {abstract} +findTopByProjectIdOrderByCreatedAtDesc ( projectId : UUID ) : Optional
}


class AiVectorDuplicateDetectionRunResponseDTO {
	{field} +completedAt : String
	{field} +createdAt : String
	{field} +detectionEngine : String
	{field} +embeddingModel : String
	{field} +errorMessage : String
	{field} +projectId : String
	{field} +runId : String
	{field} +status : String
	{field} +tasksAnalyzed : Integer
	{field} +threshold : Double
}


class AiVectorDuplicateDetectionService {
	{field} {static} -DEFAULT_EMBEDDING_MODEL : String
	{field} {static} -DETECTION_ENGINE : String
	{field} {static} -STATUS_COMPLETED : String
	{field} {static} -STATUS_FAILED : String
	{field} {static} -STATUS_PENDING : String
	{field} -entityManager : EntityManager
	{field} -projectRepository : ProjectRepository
	{field} -taskService : TaskService
	{method} -calculateAndPersistVectorResults ( run : AiVectorDuplicateDetectionRunEntity ) : int
	{method} -countEmbeddingsByProject ( projectUuid : UUID ) : int
	{method} +getLatestByProject ( projectId : String ) : AiVectorDuplicateDetectionLatestResponseDTO
	{method} +getResultsByRun ( runId : String ) : List
	{method} +getRunsByProject ( projectId : String ) : List
	{method} -hexToUuid ( hex : String ) : UUID
	{method} -mapResultToResponse ( result : AiVectorDuplicateResultEntity ) : AiVectorDuplicateDetectionResultResponseDTO
	{method} -mapRunToResponse ( run : AiVectorDuplicateDetectionRunEntity ) : AiVectorDuplicateDetectionRunResponseDTO
	{method} -parseId ( value : String , errorMessage : String ) : UUID
	{method} -parseProjectId ( projectId : String ) : UUID
	{method} -resolveThreshold ( request : AiDuplicateDetectionRequestDTO ) : Double
	{method} +startVectorDuplicateDetection ( projectId : String , request : AiDuplicateDetectionRequestDTO ) : AiVectorDuplicateDetectionRunResponseDTO
	{method} -truncate ( value : String , maxLength : int ) : String
	{method} -uuidToHex ( uuid : UUID ) : String
}


class AiVectorDuplicateResultEntity {
	{field} +createdAt : LocalDateTime
	{field} +distance : Double
	{field} +projectId : UUID
	{field} -resultId : UUID
	{field} +runId : UUID
	{field} +similarityScore : Double
	{field} +taskAId : UUID
	{field} +taskATitle : String
	{field} +taskBId : UUID
	{field} +taskBTitle : String
}


interface AiVectorDuplicateResultRepository {
	{method}  {abstract} +deleteByRunId ( runId : UUID ) : void
	{method}  {abstract} +findByProjectId ( projectId : UUID ) : List
	{method}  {abstract} +findByRunId ( runId : UUID ) : List
}




AiDuplicateDetectionLatestResponseDTO "1" o-- "0..*"  AiDuplicateDetectionResultResponseDTO : results
AiDuplicateDetectionLatestResponseDTO -->  AiDuplicateDetectionRunResponseDTO : run
AiSemanticDuplicateDetectionLatestResponseDTO "1" o-- "0..*"  AiSemanticDuplicateDetectionResultResponseDTO : results
AiSemanticDuplicateDetectionLatestResponseDTO -->  AiSemanticDuplicateDetectionRunResponseDTO : run
AiSemanticDuplicateDetectionService *--  AiSemanticDuplicateDetectionRunRepository : runRepository
AiSemanticDuplicateDetectionService *--  AiSemanticDuplicateResultRepository : resultRepository
AiVectorDuplicateDetectionLatestResponseDTO "1" o-- "0..*"  AiVectorDuplicateDetectionResultResponseDTO : results
AiVectorDuplicateDetectionLatestResponseDTO -->  AiVectorDuplicateDetectionRunResponseDTO : run
AiVectorDuplicateDetectionService *--  AiVectorDuplicateDetectionRunRepository : runRepository
AiVectorDuplicateDetectionService *--  AiVectorDuplicateResultRepository : resultRepository


@enduml